# ICP-PCL

./: .gitignore  README.md
Project1/: CMakeLists.txt
Project1/include/: icp.h  plane_fitting.h
Project1/src/: icp.cpp  icp_main.cpp  main.cpp  plane_fitting.cpp
docs/: Generalized-ICP.ipynb  ICP-point2plane.ipynb  ICP.ipynb  similarity-ICP.ipynb
